# novem-python

./: .gitignore  .mailmap  .pre-commit-config.yaml  CLI.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  flake.nix  pyproject.toml  pyrightconfig.json  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yaml  discord_issue.yaml  discord_pr.yml  discord_push.yml  nix-build.yml  python-publish.yml  python-test.yaml
examples/: README.md  mcp_mention_responder.py  mention_responder.py  requirements.txt
novem/: __init__.py  __main__.py  api.py  api_ref.py  applicator.py  cli.py  comments.py  config.py  events.py  grid.py  mail.py  profile.py  session.py  setup.py  sync.py  types.py  utils.py
novem/claim/: __init__.py
novem/cli/: __init__.py  args.py  common.py  config.py  editor.py  events.py  filter.py  gql.py  group.py  http.py  invite.py  mail.py  plot.py  setup.py  vis.py
novem/colors/: __init__.py  colors.py
novem/exceptions/: __init__.py
novem/group/: __init__.py  org.py  org_group.py  profile.py  roles.py
novem/job/: __init__.py  config.py
novem/repo/: __init__.py  config.py
novem/shared/: __init__.py
novem/table/: __init__.py  selector.py
novem/table/utils/: __init__.py  format.py
novem/tags/: __init__.py
novem/vis/: __init__.py  cell.py  colors.py  custom.py  doc.py  files.py  grid.py  grid_helpers.py  mail.py  mail_sections.py  plot.py  plot_config.py  shared.py
scripts/: bump_version.py
tests/: cases.py  conftest.py  test.conf  test_cell_format.py  test_claims.py  test_cli_config.py  test_cli_dead_token.py  test_cli_error_output.py  test_cli_filter.py  test_cli_gql.py  test_cli_grids.py  test_cli_http.py  test_cli_init_token_name.py  test_cli_mails.py  test_cli_orgs.py  test_cli_plots.py  test_cli_tags.py  test_cli_users.py  test_colors.py  test_comments.py  test_config.py  test_config_migrations.py  test_events.py  test_global_config.py  test_grid.py  test_http_requests.py  test_job.py  test_load_sync.py  test_mail.py  test_mail_sections.py  test_novem_plot.py  test_org.py  test_org_group.py  test_plot.py  test_plot_freeze.py  test_profile.py  test_repo.py  test_selector.py  test_selector_all.py  test_session.py  (+8 more)
tests/files/: hier.csv  nei_rgn_hier.csv  nei_rgn_perf.csv  nei_rgn_tb.csv
tests/selector_cases/duplciate_index/in/: data.csv  selectors.txt
tests/selector_cases/large_table/in/: data.csv  selectors.txt
