[tool.poetry]
name = "novem"
version = "0.5.0"  # do not touch manually, use `make bump-version`
description = "python library for the novem data visualisation platform"
authors = ["Sondov Engen <sondov@novem.no>", "Bjørnar Snoksrud <bjornars@novem.no>", "Martin Myrseth <myme@novem.no>"]
homepage = "https://novem.io"
repository = "https://github.com/novem-code/novem-python"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.26.0"
pyreadline3 = "^3.4.1"
colorama = "^0.4.6"
urllib3 = "^1.26.15"
typing-extensions = "^4.9.0"
packaging = "24.0"

[tool.poetry.scripts]
novem = 'novem.cli:run_cli'

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"
pre-commit = "^2.16.0"
pydantic = "^2.8.2"
pyfakefs = "^5.6.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
requests-mock = "^1.12.1"
types-requests = "^2.27.7"
black = "^24.8.0"
pandas = { version = "2.2.2", python = "^3.10" }
pandas-stubs = { version = "2.2.2.240807",  python = "^3.10" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::UserWarning",
]
