[project]
name = "novem"
version = "0.5.6"  # do not touch manually, use `make bump-version`
description = "python library for the novem data visualisation platform"
authors = [
  { name = "Sondov Engen", email = "sondov@novem.no" },
  { name = "Bjørnar Snoksrud", email = "bjornars@novem.no" },
  { name = "Martin Myrseth", email = "myme@novem.no" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.32.4",
  "pyreadline3>=3.5.4",
  "colorama>=0.4.6",
  "urllib3>=2.5.0",
  "typing-extensions>=4.14.1",
  "packaging==25.0",
]

[project.urls]
Homepage = "https://novem.io"
Repository = "https://github.com/novem-code/novem-python"

[project.scripts]
novem = "novem.cli:run_cli"

[dependency-groups]
dev = [
  "flake8>=7.1.1",
  "isort>=5.13.2,<7.0.0",
  "mypy>=1.11.2",
  "pre-commit>=2.16.0,<5.0",
  "pydantic>=2.8.2",
  "pyfakefs==5.6.0",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "requests-mock>=1.12.1",
  "types-requests>=2.27.7",
  "black>=24.8.0",
  "pandas>=2.2.2",
  "pandas-stubs>=2.2.2.240807",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::UserWarning",
]
